-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.5.1
-
-
6e3d6bf8322efd609d3a3ed33c5101072176ed5a
I have an application that records video. When I get (in QML) the onRecorderStateChanged event, data has not finished being written to the file when videoRecorder.recorderState == CameraRecorder.StoppedState.
I discovered this by attempting to hash the file (QCryptographicHash) and verifying the checksums.
I believe this is because in AVFMediaRecorderControlIOS::stopWriter() it emits the stateChange, then actually tells the writer to stop.
Unfortunately, I have to sample the file repeatedly until the file no longer changes, but this isn't 100%. The file may be added to after some delay. I'd like to have it 100% with no delay.
Also, the time varies that the file is typically done writing. iPhones 4S counter intuitively finish sooner than iPhone5.
For Gerrit Dashboard: QTBUG-50588 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
193692,5 | Emit the StoppedState change after the file has finished writing | 5.9 | qt/qtmultimedia | Status: MERGED | -2 | 0 |