src/multimedia/recording/qmediarecorder.cpp
@@ -909,6 +909,10 @@ void QMediaRecorder::stop()
     \enum QMediaRecorder::State
 
     \value StoppedState    The recorder is not active.
+        If this is the state after recording then the actual created recording has
+        finished being written to the final location and is ready on all platforms
+        except on Android. On Android, due to platform limitations, there is no way
+        to be certain that the recording has finished writing to the final location.
     \value RecordingState  The recording is requested.
     \value PausedState     The recorder is paused.
 */
